# libmathxcore

./: .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  examples.c
include/mathx/core/: add.h  bezout.h  comp.h  defs.h  div.h  euclide.h  factorial.h  float.h  gcd.h  integer.h  isqrt.h  memory.h  mul.h  pow.h  print.h  rational.h  shift.h  sub.h  uadd.h  ucomp.h  udiv.h  umul.h  usub.h  version.h
include/mathx/core/float/: fadd.h  fdiv.h  fmul.h  fpow.h  fprint.h  fsqrt.h  fsub.h  pi.h
src/: add.c  bezout.c  comp.c  div.c  euclide.c  factorial.c  float.c  gcd.c  integer.c  isqrt.c  memory.c  mul.c  pow.c  print.c  rational.c  shift.c  sub.c  uadd.c  ucomp.c  udiv.c  umul.c  usub.c  version.c
src/float/: fadd.c  fdiv.c  fmul.c  fpow.c  fprint.c  fsqrt.c  fsub.c  pi.c
tests/: CMakeLists.txt  main.c  test-framework-float.c  test-framework-float.h  test-framework-int.c  test-framework-int.h  test-framework.c  test-framework.h  test_float_functions.c  test_floats.c  test_rationals.c
vs/: libmathxcore.natvis
